--- a/style.css
+++ b/style.css
@@ -15,19 +15,20 @@ a {
 }
 
 .header {
+    
+    background-color: black;
     display: flex;
     justify-content space-between;
     height 50px;
     line-height 50px;
-    padding 0 15;
-    background-color: black;
- }
+    padding-block: 10px;
+}
  
- 
+
  .logo-link {
     display: flex;
     height: 100%;
-    align-items: center;
+    align-items: unset;
     padding-left:10%;
  
   }
@@ -39,6 +40,7 @@ a {
     font-weight: bold;
     font-size: 14px;
  }
+
 
  .navigation-underline {
     position: relative;
