--- a/style.css
+++ b/style.css
@@ -93,17 +93,129 @@ a {
 
  }
 
+ .form-popup {
+  position: fixed;
+  top:50%;
+  left: 50%;
+  max-width: 720px;
+  width: 100%;
+  background: #f7f2f2;
+  border: 2 px solid color white;
+  transform: translate(-50%, -50%);
+
+ }
+
+ .form-popup .form-box {
+  display: flex;
+
+ }
+
+ .form-box .form-details {
+    width: 100%;
+     max-width: 330px;
+     display: flex;
+     text-align: center;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+    background: url("images/12.jpg");
+    background-size: cover;
+    background-position: center;
+ }
+
+
+ .login .form-details {
+    background: url("images/12.jpg");
+    background-size: cover;
+    background-position: center;
+ }
+
+ .signup .form-details {
+    background: url("images/1.jpg");
+    background-size: cover;
+    background-position: center;
+ }
+
+ .form-box h2 {
+text-align: center;
+margin-bottom: 30px;
+ }
+
+ .form-box .form-content {
+    width: 100%; 
+    padding: 35px;
+}
 
 .images {
   align-items: center;
   justify-content: space-between;
   display: flex;
+}
+
+.form .input-field {
+    height: 50%;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.form .input-field .input {
+   height: 100%;
+    width: 100%;
+    outline: none;
+    padding: 0 15;
+    font-size: 0.95rem;
+    border-radius: 3px;
+    border: 1px solid chocolate;
+}
+
+.form .input-field .label {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    pointer-events: none;
+    color: #9b4d57;
+    transform: translateY(-50%);
+ }
+
+ .input-field .input:is(:focus :valid)  {
+  background-color: aquamarine;
+
+ }
+
+ .input-field .input:focus  {
+    padding: 16px 15 px 0;
+ 
+  }
+
+.form-box .a {
+   color: aqua;
+   text-decoration: none;
+}
+
+.form-box .a:hover {
+    text-decoration: underline;
+ }
+
+ .button {
+width: 100%;
+outline: none;
+border: none;
+font-size: 1rem;
+font-weight: 0dvh;
+padding: 14px 0;
+border-radius: 3px;
+margin: 25px 0;
+color: aliceblue;
+background: #76b5c9;
+cursor: pointer;
+
 
 }
 
- .background-img {
-   opacity: 0.8;
-}
+//.background-img {
+    opacity: 0.8;
+
+ }
 
  .overlay-image1  {
         position: absolute;
@@ -160,3 +272,5 @@ a {
     transition: all 1s ease;
     
 }
+
+
